42.0
=========
Disk Usage Analyzer 42.0 comes with a port to libadwaita,
updated styling, and updated translations for the following locales:

 - Basque
 - Bokmål, Norwegian
 - Bulgarian
 - Catalan
 - Chinese (China)
 - Croatian
 - Czech
 - Danish
 - Finnish
 - French
 - Friulian
 - Galician
 - German
 - Hebrew
 - Hungarian
 - Icelandic
 - Indonesian
 - Italian
 - Japanese
 - Kazakh
 - Korean
 - Lithuanian
 - Occitan (post 1500)
 - Persian
 - Polish
 - Portuguese
 - Portuguese (Brazil)
 - Russian
 - Serbian
 - Slovak
 - Slovenian
 - Spanish
 - Swedish
 - Turkish
 - Ukrainian

42.rc
=========
* Translation updates:
 - Bulgarian
 - Finnish
 - French
 - Korean
 - Lithuanian
 - Polish
 - Swedish
 - Turkish

42.beta
=========
* Translation updates:
 - Catalan
 - Czech
 - Icelandic
 - Japanese
 - Russian
 - Slovenian

42.alpha
=========
Disk Usage Analyzer 42.alpha comes with a port to GTK4
and libadwaita. In addition, Zander Brown adjusted our
styling so that numbers in cells are aligned, keeping
the UI from shifting during scanning.

* Translation updates:
 - Basque
 - Chinese (China)
 - Croatian
 - Friulian
 - Galician
 - Hebrew
 - Hungarian
 - Indonesian
 - Occitan (post 1500)
 - Persian
 - Portuguese
 - Portuguese (Brazil)
 - Spanish
 - Ukrainian

41.0
=======

Disk Usage Analyzer 41 comes with support for building the GUI on windows,
contributed Gabriel Rauter.

* Translation updates:
 - Bulgarian
 - Chinese (Taiwan)
 - Croatian
 - Czech
 - Danish
 - Dutch
 - English (United Kingdom)
 - Greek, Modern (1453-)
 - Hebrew
 - Nepali
 - Occitan (post 1500)
 - Russian
 - Slovak
 - Western Frisian

40.0
=======

Disk Usage Analyzer's visuals have been updated to match the GNOME 40 visual style.

* Translation updates:
 - Basque
 - Bokmål, Norwegian
 - Catalan
 - Chinese (Taiwan)
 - Croation
 - Czech
 - Danish
 - Dutch
 - Esperanto
 - Finnish
 - French
 - Friulian
 - Galician
 - German
 - Hebrew
 - Hungarian
 - Indonesian
 - Italian
 - Japanese
 - Kazakh
 - Korean