@@ -39,6 +39,18 @@
   <translation type="gettext">baobab</translation>
 
   <releases>
+    <release version="43.alpha" date="2022-07-13">
+      <description>
+        <p>Disk Usage Analyzer 43.alpha comes with updated translations for the following locales:</p>
+        <ul>
+          <li>Chinese (China)</li>
+          <li>Dutch</li>
+          <li>Icelandic</li>
+          <li>Latvian</li>
+          <li>Nepali</li>
+        </ul>
+      </description>
+    </release>
     <release version="42.0" date="2022-03-20">
       <description>
         <p>Disk Usage Analyzer 42.0 comes with a port to libadwaita, updated styling, and updated translations for the following locales:</p>
