@@ -1,3 +1,12 @@
+43.alpha
+=========
+* Translation updates:
+ - Chinese (China)
+ - Dutch
+ - Icelandic
+ - Latvian
+ - Nepali
+
 42.0
 =========
 Disk Usage Analyzer 42.0 comes with a port to libadwaita,
